--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script src="js/moment-2.2.1.js"></script>
 	<script src="js/clndr.js"></script>
 	<script src="js/site.js"></script>
+	<script src="js/script.js"></script>
 	<!----End Calender -------->
 </head>
 
@@ -44,17 +45,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wrap">
 			<div class="column_left">
 				<div class="menu_box">
-				
+
 				</div>
 			</div>
 			<div class="column_middle">
 				<div class="column_middle_grid1">
-					<div class="menu_box">
-						<h3>Escolha a opção para cálculo de custo</h3>
+					<div id="menuPrincipal" class="menu_box">
+						<h3>Escolha a opção para cálculo de custas</h3>
 						<div class="menu_box_list">
 							<ul>
 								<li>
-									<a href="#" class="document">
+									<a onclick="abrirProcessosGeral()" href="#" class="document">
 										<span>Processos em Geral</span>
 										<div class="clear"></div>
 									</a>
@@ -89,11 +90,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</ul>
 						</div>
 					</div>
+					<div id="menuOpcao" class="column_right_grid menu_box">
+						<div class="sign_in">
+							<h3>Processos Judiciais em Geral</h3>
+								<span>
+									<i>
+										<img src="images/arrow-right.png" alt="" />
+									</i>
+									<input id="valorCausa" type="text" value="Informe o valor da causa (R$)" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Informe o valor da causa (R$)';}">
+								</span>
+								<input type="submit" onClick="calcularCustas()" class="my-button" value="Calcular">
+								<div id="resultado">
+								</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="column_right">
 				<div class="menu_box">
-				
+
 				</div>
 			</div>
 			<div class="clear"></div>
