--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="header_top">
 				<script type="text/javascript" src="js/responsive-nav.js"></script>
 				<div class="titulo">
-					LOGO DO APLICATIVO
+					<img src="images/logo_tjba.png">
 				</div>
 				<div class="clear"></div>
 			</div>
@@ -61,30 +61,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</a>
 								</li>
 								<li>
-									<a href="#" class="document">
-										<span>Atos dos Tabeliães</span>
+									<a href="#">
+										<span></span>
 										<div class="clear"></div>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="document">
-										<span>Atos de Registro de Imóveis</span>
+									<a href="#">
+										<span></span>
 										<div class="clear"></div>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="document">
-										<span>Atos de Registro de Títulos</span>
+									<a href="#">
+										<span></span>
+										<div class="clear"></div>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="document">
-										<span>Atos de Protesto de Títulos</span>
+									<a href="#">
+										<span></span>
+										<div class="clear"></div>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="document">
-										<span>Atos de Registro Civil</span>
+									<a href="#">
+										<span></span>
+										<div class="clear"></div>
 									</a>
 								</li>
 							</ul>
