--- a/index.html
+++ b/index.html
@@ -1,127 +1,45 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 
 <head>
-	<title>Ui kits Website Template | Home :: w3layouts</title>
+	<title>Calculadora Judicial</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/estilo.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="css/nav.css" rel="stylesheet" type="text/css" media="all" />
-	<link href='http://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/login.js"></script>
-	<script type="text/javascript" src="js/Chart.js"></script>
-	<script type="text/javascript" src="js/jquery.easing.js"></script>
-	<script type="text/javascript" src="js/jquery.ulslide.js"></script>
-	<!----Calender -------->
-	<link rel="stylesheet" href="css/clndr.css" type="text/css" />
-	<script src="js/underscore-min.js"></script>
-	<script src="js/moment-2.2.1.js"></script>
-	<script src="js/clndr.js"></script>
-	<script src="js/site.js"></script>
 	<script src="js/script.js"></script>
-	<!----End Calender -------->
 </head>
 
 <body>
-	<div class="wrap">
+	<div id="page-wrapper" class="flex-column">
 		<div class="header">
-			<div class="header_top">
-				<script type="text/javascript" src="js/responsive-nav.js"></script>
+			<div>
 				<div class="titulo">
 					<img src="images/logo_tjba.png">
 				</div>
-				<div class="clear"></div>
 			</div>
 		</div>
-	</div>
-	<div class="main">
-		<div class="wrap">
-			<div class="column_left">
-				<div class="menu_box">
-
+		<div class="main flex-column flex-middle flex-center">
+			<div id="menuPrincipal" class="menu col-6 flex-column flex-middle">
+				<h3 class="titulo-menu">Escolha a opção para cálculo de custas</h3>
+				<div class="flex-column col-12" id="opcoesCalculo">
+					<span class="fade-in" onclick="abrirSecao('processosEmGeral')">Processos em Geral</span>
+					<span class="fade-in" onclick="abrirSecao('atosTabeliaesNotas')">Atos dos Tabeliães de Notas</span>
+					<span class="fade-in" onclick="abrirSecao('atosOficiaisImoveis')">Atos dos Oficiais de Registro de Imóveis</span>
+					<span class="fade-in" onclick="abrirSecao('atosOficiaisTitulos')">Atos dos Oficiais de Registro de Títulos e Documentos e Civil das Pessoas Jurídicas</span>
+					<span class="fade-in" onclick="abrirSecao('atosTabeliaesTitulos')">Atos dos Tabeliães de Protesto de Títulos</span>
+					<!-- <span class="fade-in" onclick="abrirSecao('atosOficiaisCivil')">Atos dos Oficiais de Registro Civil das Pessoas Naturais e de Interdições e Tutelas</span> -->
 				</div>
 			</div>
-			<div class="column_middle">
-				<div class="column_middle_grid1">
-					<div id="menuPrincipal" class="menu_box">
-						<h3>Escolha a opção para cálculo de custas</h3>
-						<div class="menu_box_list">
-							<ul>
-								<li>
-									<a onclick="abrirProcessosGeral()" href="#" class="document">
-										<span>Processos em Geral</span>
-										<div class="clear"></div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span></span>
-										<div class="clear"></div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span></span>
-										<div class="clear"></div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span></span>
-										<div class="clear"></div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span></span>
-										<div class="clear"></div>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span></span>
-										<div class="clear"></div>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div id="menuOpcao" class="column_right_grid menu_box">
-						<div class="sign_in">
-							<h3>Processos Judiciais em Geral</h3>
-								<span>
-									<i>
-										<img src="images/arrow-right.png" alt="" />
-									</i>
-									<input id="valorCausa" type="text" value="Informe o valor da causa (R$)" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Informe o valor da causa (R$)';}">
-								</span>
-								<input type="submit" onClick="calcularCustas()" class="my-button" value="Calcular">
-								<div id="resultado">
-								</div>
-						</div>
-					</div>
+			<div class="menu col-6 flex-column flex-middle hidden-menu" id="menuOpcao">
+				<h3 class="titulo-menu" id="tituloSecao"></h3>
+				<input id="valorCausa" type="text" value="Informe o valor da causa (R$)" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Informe o valor da causa (R$)';}">
+				<div class="button-wrapper">
+					<input class="action-button fade-in" type="submit" onClick="calcularCustas()" value="Calcular">
+					<input class="action-button fade-in" type="submit" onClick="voltar()" value="Voltar">
+				</div>
+				<div id="resultado" class="hidden-menu">
 				</div>
 			</div>
-			<div class="column_right">
-				<div class="menu_box">
-
-				</div>
-			</div>
-			<div class="clear"></div>
 		</div>
-	</div>
-	<div class="copy-right">
-		<p>© 2013 Designed by
-			<a href="http://graphicburger.com/flat-design-ui-components/" target="_blank">GraphicBurger</a> • Template by
-			<a href="http://w3layouts.com" target="_blank">w3layouts</a>
-		</p>
 	</div>
 </body>
 
