--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="theme-color" content="#170800">
+	<link rel="manifest" href="manifest.json">
 	<link href="css/estilo.css" rel="stylesheet" type="text/css" media="all" />
 	<script src="js/script.js"></script>
 </head>
