Making more PWA changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE HTML>
+<html lang="pt-br">
 
 <head>
-	<title>Calculadora Judicial</title>
+	<title>Calculadora de Custas Judiciais</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="theme-color" content="#170800">
+	<meta name="description" content="Calculadora de Custas Judiciais com informações do Tribunal de Justiça da Bahia (TJBA)">
 	<link rel="manifest" href="manifest.json">
 	<link href="css/estilo.css" rel="stylesheet" type="text/css" media="all" />
 	<script src="js/script.js"></script>
@@ -15,7 +16,7 @@
 		<div class="header">
 			<div>
 				<div class="titulo">
-					<img src="images/logo_tjba.png">
+					<img alt="logo do tribunal de justiça" src="images/logo_tjba.png">
 				</div>
 			</div>
 		</div>
