Adding minified files

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="theme-color" content="#170800">
 	<meta name="description" content="Calculadora de Custas Judiciais com informações do Tribunal de Justiça da Bahia (TJBA)">
 	<link rel="manifest" href="manifest.json">
-	<link href="css/estilo.css" rel="stylesheet" type="text/css" media="all" />
-	<script src="js/script.js"></script>
+	<link href="css/estilo.min.css" rel="stylesheet" type="text/css" media="all" />
+	<script src="js/script.min.js"></script>
 </head>
 
 <body>
